--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -16,19 +16,6 @@
   margin: 0 auto !important;
 }
 
-.CommunityStack::-webkit-scrollbar {
-  width: 1em;
-}
-
-.CommunityStack::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-.CommunityStack::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
-}
-
-.b-1 {
-  background: red;
+svg {
+  font-size: 18px !important;
 }
