--- a/src/components/CommunitySubscribe/CommunitySubscribe.css
+++ b/src/components/CommunitySubscribe/CommunitySubscribe.css
@@ -2,3 +2,16 @@
   min-height: 100px;
   width: 100%;
 }
+
+@media (max-width: 600px) {
+  .community-subscribe {
+    flex-direction: column;
+  }
+  .title-div {
+    margin: 0 auto;
+  }
+  .button-div {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
