--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,3 +2,15 @@ body {
   margin: 0;
   padding: 0;
 }
+
+main {
+  padding: 0.5em;
+  padding-top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.b1 {
+  border: 2px solid red;
+}
